2002-09-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION (MY_PATCH_LEVEL): make 1.7.0

	* Documentation/user/refman.itely: patch by Graham Percival

	* scripts/lilypond-book.py (make_pixmap): let gs write to
	outputfile directly

2002-09-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/simultaneous-music-iterator.cc
	(Simultaneous_music_iterator): init children_list_

	* lily/part-combine-music-iterator.cc
	(Part_combine_music_iterator): init state_

	* lily/sequential-iterator.cc (Sequential_iterator): init cursor_

	* lily/percent-repeat-iterator.cc (Percent_repeat_iterator): init
	child_iter_.

	* lily/sequential-iterator.cc (Sequential_iterator): init list_

	* lily/translator-def.cc (Translator_def): make a GC proof copy
	constructor.

2002-09-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/percent-repeat-iterator.cc (process): quit iter.

	* lily/simultaneous-music-iterator.cc
	(Simultaneous_music_iterator): protection bugfix.
	(get_pending_events): bugfix: don't use s twice.

	* debian/: debian patches by Anthony Fok.
	
	* lily/clef-engraver.cc (create_clef): bugfix for octavate clef
	(thanks Rune!)

	* Documentation/user/tutorial.itely: replace grob by
	object. Explain \once.

	* scm/music-property-description.scm (once): add 'once

2002-09-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/simultaneous-music-iterator.cc (skip): call quit()
	when an iterator exits early.

2002-09-13  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/rests.ly: added comment on bogus warnings about missing flags

	* lily/clef.cc, lily/rests.cc: added warning when font character
	lookup fails.

	* lily/rests.cc: workaround: consider missing ledgered rests in
	ancient font.

	* lily/rests.cc: bugfix: cleaned up font lookup code that handles
	special cases of styles 'default' and 'classical'.  This should
	also fix the behaviour of lily/multi-measure-rest.cc, which so far
	did not consider styles 'default' and 'classical'.

2002-09-13  Rune Zedeler  <rune@zedeler.dk>
