@@ -198,7 +198,9 @@ void
 ly_init_guile ()
 {
   SCM last_mod = scm_current_module ();
-  scm_set_current_module (scm_c_resolve_module ("guile"));
+  scm_set_current_module (scm_c_resolve_module ("lily"));
+
+  scm_c_use_module ("guile");
   
   for (int i=scm_init_funcs_->size () ; i--;)
     (scm_init_funcs_->elem (i)) ();
@@ -702,4 +704,48 @@ robust_list_ref(int i, SCM l)
     l = gh_cdr (l);
 
   return gh_car(l);
+}
+
+static int module_count;
+
+SCM
+ly_make_anonymous_module ()
+{
+  String s = "*anonymous-ly-" + to_string (module_count++) +  "*";
+  SCM mod = scm_c_resolve_module (s.to_str0());
+
+  scm_module_define (mod, ly_symbol2scm ("symbols-defined-here"), SCM_EOL);
+  return mod;
+}
+
+void
+ly_copy_module_variable (SCM dest, SCM src)
+{
+  SCM defd = ly_symbol2scm ("symbols-defined-here");
+  SCM dvar = scm_module_lookup (src, ly_symbol2scm ("symbols-defined-here"));
+  SCM lst =  scm_variable_ref (dvar);
+  for (SCM s =lst; gh_pair_p (s); s  = gh_cdr (s))
+    {
+      SCM var  = scm_module_lookup (src, gh_car (s));
+      scm_module_define (dest, gh_car (s),
+			 scm_variable_ref (var));
+    }
+
+  scm_module_define (dest, defd, lst);
+}
+
+SCM
+ly_module_to_alist (SCM mod)
+{
+  SCM defd = ly_symbol2scm ("symbols-defined-here");
+  SCM dvar = scm_module_lookup (mod, defd);
+  SCM lst = scm_variable_ref (dvar);
+
+  SCM alist =  SCM_EOL;
+  for (SCM s =lst; gh_pair_p (s); s  = gh_cdr (s))
+    {
+      SCM var  = scm_module_lookup (mod, gh_car (s));
+      alist= scm_cons (scm_cons (gh_car(s), scm_variable_ref (var)), alist);
+    }
+  return alist;
 }
