@@ -29,13 +29,14 @@ Music_output_def::Music_output_def ()
 {
   style_sheet_ = SCM_EOL;
   scaled_fonts_ = SCM_EOL;
-
-  variable_tab_ = new Scheme_hash_table;
+  
   translator_tab_ = new Scheme_hash_table;
-
+  scope_ = SCM_EOL;
+  
   smobify_self ();
-  scm_gc_unprotect_object (variable_tab_->self_scm ());
-  scm_gc_unprotect_object (translator_tab_->self_scm ());  
+  scm_gc_unprotect_object (translator_tab_->self_scm ());
+
+  scope_ =   ly_make_anonymous_module();
 }
 
 Music_output_def::~Music_output_def ()
@@ -44,18 +45,21 @@ Music_output_def::~Music_output_def ()
 
 Music_output_def::Music_output_def (Music_output_def const &s)
 {
-  variable_tab_ = new Scheme_hash_table (*s.variable_tab_);
+  scope_ = SCM_EOL;
   translator_tab_ = new Scheme_hash_table (*s.translator_tab_);
 
   style_sheet_ = SCM_EOL;
   scaled_fonts_ = SCM_EOL;
 
   smobify_self ();
-  scm_gc_unprotect_object (variable_tab_->self_scm ());
   scm_gc_unprotect_object (translator_tab_->self_scm ());  
   
   style_sheet_ = scm_list_copy (s.style_sheet_);
   scaled_fonts_ = scm_list_copy (s.scaled_fonts_);  
+
+  scope_= ly_make_anonymous_module ();
+  ly_copy_module_variable (scope_, s.scope_);
+
 }
 
 
@@ -69,7 +73,7 @@ Music_output_def::mark_smob (SCM m)
   Music_output_def * mo = (Music_output_def*) SCM_CELL_WORD_1 (m);
   scm_gc_mark (mo->style_sheet_);
   scm_gc_mark (mo->translator_tab_->self_scm ());
-  scm_gc_mark (mo->variable_tab_->self_scm ());
+  scm_gc_mark (mo->scope_);
 
   return mo->scaled_fonts_;
 }
@@ -148,4 +152,30 @@ Music_output_def::outname_string ()
       out = p.string ();
     }
   return out;
+}
+
+
+
+SCM
+Music_output_def::get_scmvar (String s) const
+{
+  return lookup_variable (ly_symbol2scm (s.to_str0 ()));
+}
+
+
+void
+Music_output_def::set_variable (SCM sym, SCM val)
+{
+  scm_module_define (scope_, sym, val);
+  
+  SCM var = scm_module_lookup (scope_, ly_symbol2scm ("symbols-defined-here"));
+  scm_variable_set_x (var, gh_cons (sym,  scm_variable_ref (var)));
+}
+
+SCM
+Music_output_def::lookup_variable (SCM sym) const
+{
+  SCM var = scm_module_lookup (scope_, sym);
+
+  return scm_variable_ref (var);
 }
