@@ -1,3 +1,8 @@
+2002-09-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* lily/my-lily-lexer.cc: use SCM module in stead of
+	Scheme_hash_table. Changes throughout.  
+
 2002-09-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* VERSION (MY_PATCH_LEVEL): make 1.7.0
